k8s/05-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-api
  namespace: banking
spec:

  replicas: 2
  selector:
    matchLabels:
      app: banking-api

  template:
    metadata:
      labels:
        app: banking-api

    spec:
      serviceAccountName: banking-api-sa

      nodeSelector:
        type: high-memory

      tolerations:
        - key: "database-only"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      
      containers:
        - name: banking-api
          image: elashrypublic/banking-api:v1.0
          ports:
            - containerPort: 3000

          startupProbe:
            httpGet:
              path: /health
              port: 3000
            failureThreshold: 12
            periodSeconds: 5

          # 🔥 Readiness Probe
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          # 🔥 Liveness Probe
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
