k8s/19-daemonset-fluentd.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: banking
spec:
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:

      nodeSelector:
        type: high-memory

      tolerations:
        - operator: Exists

      containers:
        - name: fluentd
          image: fluent/fluentd-kubernetes-daemonset
