k8s/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking
spec:
  rules:
    - host: banking.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-dashboard-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: banking-api-service
                port:
                  number: 3000
