k8s/10-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: banking
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
