k8s/12-allow-dashboard-NP.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dashboard-egress-api
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: banking-dashboard
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: banking-api
      ports:
        - protocol: TCP
          port: 3000

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dashboard-ingress-external
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: banking-dashboard
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 80
