k8s/13-allow-api-NP.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-ingress-from-dashboard
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: banking-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: banking-dashboard
      ports:
        - protocol: TCP
          port: 3000

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-egress-postgres
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: banking-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
